--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -560,6 +560,8 @@
     }
     .unordered-list-about li {
         font-size: 0.9rem;
+        padding: 5px 0px 5px 0px;
+        
     }
 }
 @media (max-width: 690px) {
@@ -610,6 +612,7 @@
     }
     .unordered-list-about li {
         font-size: 0.8rem;
+        
     }
 }
 @media (max-width: 690px) and (min-height: 410px) {
@@ -675,6 +678,7 @@
     }
     .unordered-list-about li {
         font-size: 0.7rem;
+        
     }
 }
 @media (max-width: 420px) {
