patient portal about component done with responsive design

--- a/client/src/pages/about/helpers/PortalSection.css
+++ b/client/src/pages/about/helpers/PortalSection.css
@@ -200,7 +200,603 @@
     font-size: 1.2rem;
     color: black;
 }
+@media (max-width: 1400px) {
+    .portal-section   {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out; /* Start slow, accelerate, then decelerate */
+    
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        margin: -175px 0px 120px 70px;
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;     /* the gap */
+        --b: 4px;    /* border thickness*/
+        --c: #5f39393f; /* the color */
+        padding: 10px 80px 10px 80px;
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background:
+          var(--_g1) var(--_p, 25%) 0   ,var(--_g2) 0    var(--_p,125%),
+          var(--_g1) var(--_p,125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        width: 35%;
+        text-align: center;
+        opacity: 1; /* Initial opacity set to 0 */
+        transform: translateY(20px); /* Initial position offscreen */
+    }
+    
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 2rem;
+    }
 
+    .portal-section p {
+        font-size: 1.1rem;
+        color: black;
+        line-height: 30px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 1rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 25px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+}
+@media (max-width: 1030px) {
+    .portal-section   {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out; /* Start slow, accelerate, then decelerate */
+    
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        margin: -175px 0px 120px 70px;
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;     /* the gap */
+        --b: 4px;    /* border thickness*/
+        --c: #5f39393f; /* the color */
+        padding: 10px 60px 10px 60px;
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background:
+          var(--_g1) var(--_p, 25%) 0   ,var(--_g2) 0    var(--_p,125%),
+          var(--_g1) var(--_p,125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        width: 45%;
+        text-align: center;
+        opacity: 1; /* Initial opacity set to 0 */
+        transform: translateY(20px); /* Initial position offscreen */
+    }
+    
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 2rem;
+    }
+
+    .portal-section p {
+        font-size: 1.1rem;
+        color: black;
+        line-height: 30px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 1rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 25px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+}
+@media (max-width: 950px) {
+    .about-parent-div {
+        flex-direction: column;
+    }
+
+
+    .portal-section {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        /* ------------------------------------ */
+        margin: 40px auto 0px auto;
+        /* ------------------------------------ */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;
+        --b: 4px;
+        --c: #5f39393f;
+        padding: 30px 40px 10px 40px;
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background: var(--_g1) var(--_p, 25%) 0 ,var(--_g2) 0 var(--_p, 125%), var(--_g1) var(--_p, 125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        /* ------------------------- */
+        width: 75%;
+        /* ------------------------- */
+        text-align: center;
+        opacity: 1;
+        transform: translateY(20px);
+        align-self: center;
+    }
+
+
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 2rem;
+    }
+
+    .portal-section p {
+        font-size: 1.3rem;
+        color: black;
+        line-height: 30px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 1.3rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 25px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+
+}
+@media (max-width: 815px) {
+    .about-parent-div {
+        flex-direction: column;
+    }
+
+
+    .portal-section {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        /* ------------------------------------ */
+        margin: 40px auto 0px auto;
+        /* ------------------------------------ */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;
+        --b: 4px;
+        --c: #5f39393f;
+        padding: 30px 40px 10px 40px;
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background: var(--_g1) var(--_p, 25%) 0 ,var(--_g2) 0 var(--_p, 125%), var(--_g1) var(--_p, 125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        /* ------------------------- */
+        width: 75%;
+        /* ------------------------- */
+        text-align: center;
+        opacity: 1;
+        transform: translateY(20px);
+        align-self: center;
+    }
+
+
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 2rem;
+    }
+
+    .portal-section p {
+        font-size: 1.3rem;
+        color: black;
+        line-height: 30px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 1.3rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 25px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+
+}
+@media (max-width: 700px) {
+    .about-parent-div {
+        flex-direction: column;
+    }
+
+
+    .portal-section {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        /* ------------------------------------ */
+        margin: 40px auto 0px auto;
+        /* ------------------------------------ */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;
+        --b: 4px;
+        --c: #5f39393f;
+        padding: 30px 40px 10px 40px;
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background: var(--_g1) var(--_p, 25%) 0 ,var(--_g2) 0 var(--_p, 125%), var(--_g1) var(--_p, 125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        /* ------------------------- */
+        width: 75%;
+        /* ------------------------- */
+        text-align: center;
+        opacity: 1;
+        transform: translateY(20px);
+        align-self: center;
+    }
+
+
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 1.6rem;
+    }
+
+    .portal-section p {
+        font-size: 1rem;
+        color: black;
+        line-height: 20px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 1rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 25px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+
+}
+@media (max-width: 440px) {
+    .about-parent-div {
+        flex-direction: column;
+    }
+
+
+    .portal-section {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        /* ------------------------------------ */
+        margin: 40px auto 0px 50px;
+        /* ------------------------------------ */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;
+        --b: 4px;
+        --c: #5f39393f;
+        padding: calc(var(--g) + var(--b));
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background: var(--_g1) var(--_p, 25%) 0 ,var(--_g2) 0 var(--_p, 125%), var(--_g1) var(--_p, 125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        /* ------------------------- */
+        width: 80%;
+        /* ------------------------- */
+        text-align: center;
+        opacity: 1;
+        transform: translateY(20px);
+        align-self: center;
+    }
+
+
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 1.4rem;
+    }
+
+    .portal-section p {
+        font-size: 0.8rem;
+        color: black;
+        line-height: 20px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 0.8rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 20px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+    .portal-unordered-list-about a {
+        font-size: 1.5rem;
+        transition: font-size 0.3s ease 0s;
+    }
+}
+@media (max-width: 350px) {
+    .about-parent-div {
+        flex-direction: column;
+        /* ------------------------- */
+        margin-bottom: -40px;
+        /* ------------------------- */
+    }
+
+
+    .portal-section {
+        animation: portalEntrance 0.2s forwards;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+        margin: 0;
+        display: grid;
+        place-content: center;
+        grid-auto-flow: column;
+        gap: 30px;
+        background: pink;
+        position: relative;
+        width: 65%;
+        background: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 2px 12px 0 rgba(31, 38, 135, 0.57);
+        transition: all 0.3s ease 0s;
+        z-index: 10;
+        /* ------------------------------------ */
+        margin: 0px 0px 0px 15px;
+        /* ------------------------------------ */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0.2rem;
+        color: #fff;
+        --g: 4px;
+        --b: 4px;
+        --c: #5f39393f;
+        padding: calc(var(--g) + var(--b));
+        --_c: #0000 0 25%, var(--c) 0 50%;
+        --_g1: repeating-linear-gradient(90deg ,var(--_c)) repeat-x;
+        --_g2: repeating-linear-gradient(180deg,var(--_c)) repeat-y;
+        background: var(--_g1) var(--_p, 25%) 0 ,var(--_g2) 0 var(--_p, 125%), var(--_g1) var(--_p, 125%) 100%,var(--_g2) 100% var(--_p, 25%);
+        background-size: 200% var(--b),var(--b) 200%;
+        cursor: pointer;
+        filter: grayscale(50%);
+        transition: .3s;
+        /* ------------------------- */
+        width: 95%;
+        /* ------------------------- */
+        text-align: center;
+        opacity: 1;
+        transform: translateY(20px);
+    }
+
+
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 1.4rem;
+    }
+
+    .portal-section p {
+        font-size: 0.8rem;
+        color: black;
+        line-height: 20px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 0.8rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 20px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
+    .portal-unordered-list-about a {
+        font-size: 1.2rem;
+        transition: font-size 0.3s ease 0s;
+    }
+
+}
 @media (max-width: 275px) {
+    .portal-section h2 {
+        position: relative;
+        display: inline-block;
+        font-size: 1.4rem;
+    }
 
+    .portal-section p {
+        font-size: 0.9rem;
+        color: black;
+        line-height: 15px;
+    }
+
+
+    .portal-unordered-list-about li {
+        text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.3), 1px 1px 0px rgba(143, 0, 72,0.8);
+        padding: 4px 0px 4px 0px;
+        font-size: 0.8rem;
+        color: #333;
+        /* ---------------------------- */
+        opacity: 0.7;
+        /* ---------------------------- */
+        color: black;
+        letter-spacing: 0.1rem;
+        line-height: 12px;
+        text-shadow: 3px 2px 0px rgba(136, 136, 136, 0.6);
+    }
 }
