--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -1,3 +1,10 @@
+.top-div-about {
+    width: 100vw;
+    background-image: url(https://i.imgur.com/kcvWCVN.webp);
+    background-size: cover;
+    background-position: left;
+    background-repeat: no-repeat;
+}
 .about-parent-div {
     display: flex;
     flex-direction: row;
@@ -39,10 +46,10 @@
     z-index: 10;
     margin: 140px 0 0 0;
 
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     border-radius: 0.2rem;
-    background: rgba(161, 2, 42, 0.7);
+    background: rgba(161, 2, 42, 0.75);
     
     padding: 1.5rem;
     color: #fff;
@@ -147,6 +154,8 @@
 }
 .about-div-bulleted {
     padding: 10px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 .unordered-list-about {
     flex-direction: column;
@@ -269,6 +278,15 @@
 
 }
 @media (max-width: 1120px) {
+    .top-div-about {
+        width: 100vw;
+        /* ----------------------------------------------------------- */
+        background-image: url(https://i.imgur.com/mPscUmh.webp);
+        /* ----------------------------------------------------------- */
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
     .about-div-responsive {
         position: relative;
         width: 70%;
