--- a/client/src/pages/lazyHome/helpers/LocationComponent.css
+++ b/client/src/pages/lazyHome/helpers/LocationComponent.css
@@ -9,7 +9,7 @@
 .home-locations {
     align-items: center;
     /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
-    background-image: url('/public/CaliBackground.jpg');
+    background-image: url('https://i.imgur.com/UTaX1hf.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
