--- a/client/src/components/helpers/ExpertiseBlocks.css
+++ b/client/src/components/helpers/ExpertiseBlocks.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('/public/CaliBackground.jpg');
+    background-image: url('https://i.imgur.com/UTaX1hf.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -105,7 +105,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-image: url('/public/CaliBackground.jpg');
+        background-image: url('https://i.imgur.com/UTaX1hf.webp');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -167,7 +167,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-image: url('/public/CaliBackground.jpg');
+        background-image: url('https://i.imgur.com/UTaX1hf.webp');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
