--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -1,9 +1,9 @@
 .top-div-about {
     width: 100vw;
     background-image: url(https://i.imgur.com/kcvWCVN.webp);
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: unset;
+    background-repeat: repeat;
 }
 .about-parent-div {
     display: flex;
@@ -43,7 +43,7 @@
     border-right: 0px solid rgb(255, 255, 255);
 
     transition: all 0.3s ease 0s; /* Adding transition for smoother hover effect */
-    z-index: 10;
+    z-index: 0;
     margin: 140px 0 0 0;
 
     backdrop-filter: blur(3px);
