Call & Directions Component Responsive design and logic

--- a/client/src/components/helpers/navbarHelpers/ContactNav.css
+++ b/client/src/components/helpers/navbarHelpers/ContactNav.css
@@ -34,7 +34,9 @@
     margin: 0px 0px 0px 30px;
     font-size: 1.5rem;
 }
-
+.nav-button {
+  z-index: 8;
+}
 .contact-nav-menu {
     display: flex;
     flex-direction: column;
@@ -102,8 +104,126 @@
     flex-direction: row;
   }
 
+  #map-icon-nav {
+    margin: 0px 0px 0px 0px;
+  }
 
-@media (max-width: 350px) {
+  #map-icon-nav:hover {
+    transform: translateY(-3px);
+  }
+
+  @media (max-width: 1400px) {
+    .nav-button {
+      align-self: center;
+      background-color: rgb(143, 0, 72);
+      z-index: 8;
+    }
+    .riverside-call-directions {
+      margin: 25px 0px 25px 0px;
+    }
+
+    .contact-nav-menu {
+      z-index: 8;
+    }
+    #nav-phone-call {
+      font-size: 1.8rem;
+    }
+    #nav-map-go {
+      font-size: 1.8rem;
+
+    }
+
+  }
+
+  
+  @media (max-width: 1050px) {
+    .nav-button {
+      align-self: center;
+      background-color: rgb(143, 0, 72);
+      z-index: 8;
+    }
+    .riverside-call-directions {
+      margin: 15px 0px 15px 0px;
+    }
+
+    .contact-nav-menu {
+      z-index: 8;
+    }
+
+  }
+
+  @media (max-width: 850px) {
+    .menu-open .words-appear {
+      display: flex;
+    }
+    .menu-open .nav-seperater {
+      margin: 0px 4px 0px 2px;
+    }
+    .menu-open .nav-phone-and-seperater {
+      margin: 0px 0px 0px 20px;
+    }
+    .navbar-container {
+      max-height: 160px;
+    }
+    .nav-button {
+      padding: 0px 0px 0px 0px;
+      margin: 5px 5px 0px 5px;
+      display: flex;
+      align-items: center;
+      align-self: unset;
+      justify-content: center;
+      z-index: 8;
+    }
+    .nav-phone-and-seperater {
+      display: flex;
+      flex-direction: row;
+      margin: 5px;
+      z-index: 8;
+  }
+    #nav-phone {
+      margin: 0px 5px 0px 2px;
+      font-size: 0.9rem;
+      align-self: flex-start;
+      z-index: 8;
+  
+    }
+    #nav-map-go {
+      margin: 0px 10px 0px 15px;
+      font-size: 1rem;
+    }
+    #nav-phone-call {
+      margin: 0px 15px 0px 10px;
+      font-size: 1rem;
+    }
+    .nav-seperater {
+        display: none;
+        padding: 0px 0px 0px 0px;
+    }
+    #nav-map {
+        margin: 0px 2px 0px 5px;
+        padding: 0px 0px 0px 0px;
+        font-size: 0.9rem;
+        z-index: 8;
+    }
+    .words-appear {
+      display: none;
+    }
+    .contact-nav-menu {
+      position: absolute;
+      z-index: 8;
+      background-color: rgb(143, 0, 72);
+  
+    }
+    .riverside-call-directions {
+      min-width: 165px;
+      justify-content: space-between;
+    }
+    .change-call-us {
+      
+    }
+  }
+
+@media (max-width: 450px) {
   .menu-open .words-appear {
     display: flex;
   }
@@ -118,6 +238,7 @@
   }
   .nav-button {
     padding: 0px 0px 0px 0px;
+    margin: 5px 5px 0px 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,7 +252,7 @@
 }
   #nav-phone {
     margin: 0px 5px 0px 2px;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     align-self: flex-start;
     z-index: 8;
 
@@ -151,7 +272,7 @@
   #nav-map {
       margin: 0px 2px 0px 5px;
       padding: 0px 0px 0px 0px;
-      font-size: 0.8rem;
+      font-size: 0.7rem;
       z-index: 8;
   }
   .words-appear {
@@ -164,10 +285,22 @@
 
   }
   .riverside-call-directions {
-    min-width: 105px;
+    min-width: 125px;
     justify-content: space-between;
   }
   .change-call-us {
     
+  }
+}
+
+@media (max-width: 350px) {
+  #nav-phone {
+    font-size: 0.7rem;
+  }
+  #nav-map {
+    font-size: 0.7rem;
+  }
+  .riverside-call-directions {
+    min-width: 105px;
   }
 }
